<?xml version="1.0"?>
<package format="3">
  <name>capabilities2_server</name>
  <version>0.0.1</version>
  <description>
    Package that implements the capabilities2 service, a successor to capabilities
  </description>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>bondcpp</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>
  <depend>capabilities2_msgs</depend>
  <depend>capabilities2_runner</depend>
  <depend>capabilities2_utils</depend>
  <depend>event_logger</depend>
  <depend>event_logger_msgs</depend>
  <depend>tinyxml2_vendor</depend>

  <!-- system dependency -->
  <depend>yaml-cpp</depend>
  <depend>libsqlite3-dev</depend>
  <depend>uuid</depend>
  <depend>backward_ros</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>capabilities2_launch_proxy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
  </export>
</package>
